[package]
name = "playground"
version = "0.1.1"
edition = "2021"
authors = [ "PeterMHammond" ]
description = "A Rust playground project demonstrating Cloudflare Workers functionality."
repository = "https://github.com/PeterMHammond/playground"
license = "MIT"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.2", features=['http'] }
worker-macros = { version="0.4.2", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
tera = { version = "1.20.0", default-features = false }
getrandom = { version = "0.2.15", features = ["js"] }