[package]
name = "playground"
version = "0.1.3"
edition = "2021"
authors = [ "PeterMHammond" ]
description = "A Rust playground project demonstrating Cloudflare Workers functionality."
repository = "https://github.com/PeterMHammond/playground"
license = "MIT"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1
incremental = true

[dependencies]
worker = { version = "0.5.0", features = ['http', 'axum'] }
worker-macros = { version = "0.5.0", features = ['http'] }
axum  = { version = "0.8.1", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.7" }
tera = { version = "1.19.1", default-features = false }
tower = "0.5.1"

